Simplification and cleanup